# duckdb-graphar

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  analyze-changes.yml  build-n-test.yml  test-build.yml
config/: CMakeLists.txt
include/functions/table/: flow_read_base.hpp  graphar_info.hpp  hop.hpp  hop_thread.hpp  read_base.hpp  read_edges.hpp  read_hop.hpp  read_hop_filtered.hpp  read_vertices.hpp
include/readers/: adj_reader.hpp  base_reader.hpp  duck_arrow_chunk_reader.hpp  duck_chunk_reader.hpp  duck_query_reader.hpp  low_edge_reader.hpp  offset_reader.hpp  query_reader.hpp
include/storage/: graphar_table_information.hpp
include/utils/: func.hpp  global_log_manager.hpp  type_info.hpp
scripts/: setup-custom-toolchain.sh
scripts/install-toolchain/: macos-14.sh  ubuntu-20.sh
src/: duckdb_graphar_extension.cpp  func.cpp  graphar_duck_extension.cpp  read_e.cpp  read_v.cpp
src/functions/table/: edges_vertex.cpp  graphar_info.cpp  hop.cpp  hop_thread.cpp  read_edges.cpp  read_hop.cpp  read_hop_filtered.cpp  read_vertices.cpp
src/include/: func.hpp  graphar_duck_extension.hpp  read_e.hpp  read_v.hpp
src/readers/: duck_chunk_reader.cpp
src/storage/: graphar_catalog.cpp  graphar_schema_entry.cpp  graphar_storage.cpp  graphar_table_entry.cpp  graphar_table_set.cpp
src/utils/: func.cpp  global_log_manager.cpp  type_info.cpp
test/sql/: graphar.test  graphar_duck.test
tests/: CMakeLists.txt
tests/fixture/: basic_graphar_fixture.hpp
tests/scalar_functions/: scalar_functions_fixture.hpp
tests/table_functions/: table_functions_fixture.hpp  test_hop.cpp  test_read_edges.cpp  test_read_vertices.cpp
